Fix not showing journal links

--- a/src/styles/components/_issues.scss
+++ b/src/styles/components/_issues.scss
@@ -121,9 +121,14 @@ a[href*="activity"][title*=":"] {
       content: none;
     }
 
-    .journal-actions {
-      position: relative;
-      z-index: 30;
+    .contextual {
+      padding-right: 10px;
+      padding-top: 5px;
+
+      .journal-actions, a.journal-link {
+        position: relative;
+        z-index: 30;
+      }
     }
 
     h4 {
