--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -470,9 +470,12 @@ a[href*="activity"][title*=":"] {
       height: 18px; }
     #history .journal:first-of-type:last-of-type:after {
       content: none; }
-    #history .journal .journal-actions {
-      position: relative;
-      z-index: 30; }
+    #history .journal .contextual {
+      padding-right: 10px;
+      padding-top: 5px; }
+      #history .journal .contextual .journal-actions, #history .journal .contextual a.journal-link {
+        position: relative;
+        z-index: 30; }
     #history .journal h4 {
       left: 20px;
       position: relative;
